Partial adding of uniform handling and moving draw call to other file.

--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="CGLColourHelper.cpp" />
     <ClCompile Include="cLightHelper.cpp" />
     <ClCompile Include="cMeshObject.cpp" />
+    <ClCompile Include="DrawObjectFunction.cpp" />
     <ClCompile Include="globalStuff.cpp" />
     <ClCompile Include="cShader.cpp" />
     <ClCompile Include="cShaderManager.cpp" />
