--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="sLight.cpp" />
     <ClCompile Include="globalStuff.cpp" />
     <ClCompile Include="CGLColourHelper.cpp" />
+    <ClCompile Include="DrawObjectFunction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cMeshObject.h" />
