--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="CGLColourHelper.cpp" />
     <ClCompile Include="cLightHelper.cpp" />
+    <ClCompile Include="cLightManager.cpp" />
     <ClCompile Include="cMeshObject.cpp" />
     <ClCompile Include="DrawObjectFunction.cpp" />
     <ClCompile Include="globalStuff.cpp" />
@@ -168,18 +169,19 @@
     <ClCompile Include="key_callback_GLFW.cpp" />
     <ClCompile Include="ObjectLoadingStuff.cpp" />
     <ClCompile Include="ProcessInputAsync.cpp" />
-    <ClCompile Include="sLight.cpp" />
+    <ClCompile Include="cLight.cpp" />
     <ClCompile Include="TheMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CGLColourHelper.h" />
     <ClInclude Include="cLightHelper.h" />
+    <ClInclude Include="cLightManager.h" />
     <ClInclude Include="cMeshObject.h" />
     <ClInclude Include="globalStuff.h" />
     <ClInclude Include="cShaderManager.h" />
     <ClInclude Include="cVAOManager.h" />
     <ClInclude Include="linmath.h" />
-    <ClInclude Include="sLight.h" />
+    <ClInclude Include="cLight.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="frag01.glsl" />
