--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
@@ -72,7 +72,10 @@
     <ClInclude Include="linmath.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="globalStuffOld.h">
+    <ClInclude Include="globalStuff.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="globalStuff2.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
