--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="cLightHelper.cpp" />
     <ClCompile Include="cLightManager.cpp" />
     <ClCompile Include="cMeshObject.cpp" />
+    <ClCompile Include="cVAOManager_ExtraPlyStuff.cpp" />
     <ClCompile Include="DrawObjectFunction.cpp" />
     <ClCompile Include="globalStuff.cpp" />
     <ClCompile Include="cShader.cpp" />
@@ -168,6 +169,11 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="key_callback_GLFW.cpp" />
     <ClCompile Include="ObjectLoadingStuff.cpp" />
+    <ClCompile Include="Ply\CHRTimer.cpp" />
+    <ClCompile Include="Ply\CPlyFile5nt.cpp" />
+    <ClCompile Include="Ply\CPlyFile5nt_experimental.cpp" />
+    <ClCompile Include="Ply\CStringHelper.cpp" />
+    <ClCompile Include="Ply\CVector3f.cpp" />
     <ClCompile Include="ProcessInputAsync.cpp" />
     <ClCompile Include="cLight.cpp" />
     <ClCompile Include="TheMain.cpp" />
@@ -182,6 +188,11 @@
     <ClInclude Include="cVAOManager.h" />
     <ClInclude Include="linmath.h" />
     <ClInclude Include="cLight.h" />
+    <ClInclude Include="Ply\CHRTimer.h" />
+    <ClInclude Include="Ply\CPlyFile5nt.h" />
+    <ClInclude Include="Ply\CPlyInfo.h" />
+    <ClInclude Include="Ply\CStringHelper.h" />
+    <ClInclude Include="Ply\CVector3f.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="frag01.glsl" />
