Changed NUMBEROFMIXRATIOS to MAXNUMBEROFTEXTURES in cMeshObject. Completed (and slightly enhanced) SetUpTextureBindingsPerObject() function. Added PickRandomTexture() method to cBasicTextureManager class. Added ability to load a CubeMap to cBasicTextureManager class. Added ability to generate planar texture coordinates. LoadModelIntoVAO has LoadModelsInfoVAO_PlyFile5t() into method, as well as sLoadParamsINFO3111S2018 changed to assist loading.

--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="Texture\CTextureFromBMP.cpp">
       <Filter>Texture</Filter>
     </ClCompile>
+    <ClCompile Include="Ply\CPlyFile5nt_planarUV.cpp">
+      <Filter>Ply</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cMeshObject.h" />
