--- a/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
+++ b/INFO3111-S18-GL17/INFO3111-S18-GL17.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Ply\CHRTimer.cpp" />
     <ClCompile Include="Ply\CPlyFile5nt.cpp" />
     <ClCompile Include="Ply\CPlyFile5nt_experimental.cpp" />
+    <ClCompile Include="Ply\CPlyFile5nt_planarUV.cpp" />
     <ClCompile Include="Ply\CStringHelper.cpp" />
     <ClCompile Include="Ply\CVector3f.cpp" />
     <ClCompile Include="ProcessInputAsync.cpp" />
